/**
 * BFG API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
import { WeightMeasurementRole } from './weightMeasurementRole';


/**
 * Data Transfer Object for athlete weight measurement
 */
export interface AthleteWeightMeasurementDto { 
    uuid?: string;
    athleteId?: string;
    weightKg?: number;
    measurementDate?: string;
    role?: WeightMeasurementRole;
    createdAt?: string;
    modifiedAt?: string;
}
export namespace AthleteWeightMeasurementDto {
}


