/**
 * BFG API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
import { ScopeType } from './scopeType';
import { UserDto } from './userDto';


/**
 * Data Transfer Object representing a rowing club with all its details
 */
export interface ClubDto { 
    /**
     * Unique identifier of the club
     */
    uuid?: string;
    /**
     * Full name of the club
     */
    name?: string;
    /**
     * Short name of the club (unique)
     */
    shortName?: string;
    /**
     * URL of the club logo image
     */
    logoUrl?: string;
    /**
     * Prefix for athlete card numbers (unique)
     */
    cardPrefix?: string;
    /**
     * Official club email address
     */
    clubEmail?: string;
    /**
     * Whether the club is active
     */
    isActive?: boolean;
    /**
     * UUID of the club administrator user
     */
    clubAdminId?: string;
    scopeType?: ScopeType;
    clubAdminUser?: UserDto;
    /**
     * Timestamp when the club was created
     */
    createdAt?: string;
    /**
     * Timestamp when the club was last modified
     */
    updatedAt?: string;
}
export namespace ClubDto {
}


