/**
 * BFG API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */


/**
 * Data Transfer Object for competition final standing
 */
export interface CompetitionFinalStandingDto { 
    uuid?: string;
    competitionId?: string;
    disciplineId?: string;
    entryId?: string;
    overallRank?: number;
    bestTimeMs?: number;
    points?: number;
    createdAt?: string;
    modifiedAt?: string;
}

