/**
 * BFG API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
import { CompetitionGroupGender } from './competitionGroupGender';
import { TransferRounding } from './transferRounding';


/**
 * Data Transfer Object for competition group definition
 */
export interface CompetitionGroupDefinitionDto { 
    uuid?: string;
    name?: string;
    shortName?: string;
    gender?: CompetitionGroupGender;
    minAge?: number;
    maxAge?: number;
    transferFromGroupId?: string;
    minCrewForTransfer?: number;
    transferRatio?: number;
    transferRounding?: TransferRounding;
    coxRequiredWeightKg?: number;
    coxMinWeightKg?: number;
    lightMaxWeightKg?: number;
    isActive?: boolean;
    createdAt?: string;
    modifiedAt?: string;
}
export namespace CompetitionGroupDefinitionDto {
}


