/**
 * BFG API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
import { FinishStatus } from './finishStatus';


/**
 * Data Transfer Object for competition participation
 */
export interface CompetitionParticipationDto { 
    uuid?: string;
    competitionEventId?: string;
    entryId?: string;
    lane?: number;
    finishStatus?: FinishStatus;
    finishTimeMs?: number;
    place?: number;
    createdAt?: string;
    modifiedAt?: string;
}
export namespace CompetitionParticipationDto {
}


