/**
 * BFG API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */


/**
 * Data Transfer Object for competition template
 */
export interface CompetitionTemplateDto { 
    uuid?: string;
    shortName?: string;
    name?: string;
    durationDays?: number;
    scoringSchemeId?: string;
    qualificationSchemeId?: string;
    isActive?: boolean;
    createdAt?: string;
    modifiedAt?: string;
}

