/**
 * BFG API
 *
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
import { BoatClass } from './boatClass';


/**
 * Data Transfer Object for discipline definition
 */
export interface DisciplineDefinitionDto { 
    uuid?: string;
    name?: string;
    shortName?: string;
    competitionGroupId?: string;
    boatClass?: BoatClass;
    crewSize?: number;
    hasCoxswain?: boolean;
    isLightweight?: boolean;
    distanceMeters?: number;
    maxCrewFromTransfer?: number;
    isActive?: boolean;
    createdAt?: string;
    modifiedAt?: string;
}
export namespace DisciplineDefinitionDto {
}


